image and style fixes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         </header>
         <section id="hero-banner">
             <figure id="hero-image">
-                <img src="/images/hero-image.svg" alt="Graphic of nurse and mobile phone" width="348" height="272">
+                <picture>
+                    <source srcset="/images/hero-image.svg" alt="Graphic of nurse and mobile phone" width="348" height="272" type="image/svg+xml">
+                    <img src="images/hero-image.png" alt="Graphic of nurse and mobile phone" width="348" height="272">
+                  </picture>
             </figure>
             <div id="hero-text-container">
                 <h1 class="hero-text">Get care now</h1>
