--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
         </header>
         <section id="hero-banner">
             <figure id="hero-image">
-                <picture>
-                    <source srcset="/images/hero-image.svg" alt="Graphic of nurse and mobile phone" width="348" height="272" type="image/svg+xml">
-                    <img src="images/hero-image.png" alt="Graphic of nurse and mobile phone" width="348" height="272">
-                  </picture>
+                <img src="/images/hero-image.png" alt="Graphic of nurse and mobile phone" width="348" height="272">
             </figure>
             <div id="hero-text-container">
                 <h1 class="hero-text">Get care now</h1>
